	* unix/tkUnixDefault.h
	* win/tkWinDefault.h
	* mac/tkMacDefault.h
	* macosx/tkMacOSXDefault.h        -- TIP 155 implementation
	
	This adds the 'count' and 'replace' subcommands to the text
	widget, the '-blockcursor' option, and in particular provides
	correct, smooth pixel-based scrolling of the widget under all
	circumstances.  See the text.n man page for the complete new
	documentation.

2003-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinMenu.c: more correct placing of images in compound
	menu entries.

2003-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): add alpha
	blending for images with partial transparency.  Only operates for
	15bpp+ display. [Bug 809157]

2003-10-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tkUnixRFont.c: Some cleaning up to get the file more in
	lines with the general style guidelines.  [Bug 832091]  Still many
	comments needed (from someone who knows the code!) for the style
	guide to be satisfied, so bug still open.

	* library/tkfbox.tcl (IconList_Create,IconList_Add): Added option
	munging to allow some control of foreground colours on Unix in the
	same way that you can influence the background.  [Bug 795717]

2003-10-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (GetFontAttributes): place extra check for NULL
	family against bad X servers.

	* win/tkWinImage.c (XGetImageZPixmap): add separate 16bpp
	XGetImage code to correctly handle 16bpp requests.  This appears
	to never have worked correctly.

	* tests/focusTcl.test (setup1): expand frame size to allow for
	correct visibility of windows that use larger default fonts.

2003-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tk.tcl (::tk::PlaceWindow): Added check for empty string
	first when determining placement strategy. [Bug 819284]

2003-10-23  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXDialog.c (NavServicesGetFile): Minor cleanups.